# architecture-samples

todoapp/: .gitignore  build.gradle
todoapp/app/: CMakeLists.txt  build.gradle
todoapp/app/src/main/: AndroidManifest.xml
todoapp/app/src/main/cpp/: 7segment.c  CMakeLists.txt  def.h  dotmatrix.c  lcd.c  led.c  pushbutton.c
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/: AlarmReceiver.java
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/addedittask/: AddEditTaskContract.java  AddEditTaskFragment.java  AddEditTaskPresenter.java
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/data/: Task.java
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/data/source/: TasksRepository.java
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/data/source/local/: ToDoDatabase.java
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/data/source/remote/: TasksRemoteDataSource.java
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/taskdetail/: TaskDetailActivity.java  TaskDetailAlarmActivity.java  TaskDetailContract.java  TaskDetailFragment.java  TaskDetailPresenter.java
todoapp/app/src/main/java/com/example/android/architecture/blueprints/todoapp/tasks/: TasksActivity.java  TasksContract.java  TasksFragment.java  TasksPresenter.java
todoapp/app/src/main/jni/: 7segment.c  dotmatrix.c
todoapp/app/src/main/res/layout/: activity_task_detail_alarm.xml
todoapp/app/src/main/res/menu/: taskdetail_fragment_menu.xml
todoapp/app/src/main/res/values/: strings.xml
todoapp/app/src/mock/java/com/example/android/architecture/blueprints/todoapp/data/: FakeTasksRemoteDataSource.java
(+1 files in other folders)
